--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,3 @@
 # November
+* `21/11/2023`: Added [SKMap](https://github.com/EinBaum/SKMap.git) because I die a lot (I'm WOYER)
 * `13/11/2023`: Added [AddOnsListGen](./AddOnsListGen.sh) and [AddOnsList](./AddOnsList.txt)
